modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/export_node_in_non_node_derived_class_1.gd
# GH-82809

extends Resource

@export var node: Node

func test():
	pass
